--- a/.github/workflows/schedule_etl.yaml
+++ b/.github/workflows/schedule_etl.yaml
@@ -1,24 +1,33 @@
-name: ETL Precios Diarios
+name: ETL Precios Diarios Real
 on:
   schedule:
     - cron: '0 8 * * *' # Corre a las 8 AM todos los días (UTC)
-  workflow_dispatch: # Esto permite que lo pruebes manualmente con un botón
+  workflow_dispatch: # Permite ejecutarlo manualmente desde la pestaña Actions
 
 jobs:
   run-etl:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout del código
+        uses: actions/checkout@v3
+
       - name: Instalar Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - name: Instalar dependencias
+
+      - name: Instalar Chrome y Selenium
         run: |
-          pip install firebase-admin pandas google-generativeai Pillow scikit-learn numpy
-      - name: Crear archivo de claves
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+          pip install selenium webdriver-manager beautifulsoup4 firebase-admin pandas google-generativeai Pillow scikit-learn numpy
+
+      - name: Crear archivo de credenciales Firebase
         env:
           FIREBASE_JSON: ${{ secrets.FIREBASE_JSON_SECRET }}
         run: echo "$FIREBASE_JSON" > firebase_key.json
-      - name: Ejecutar Script ETL
+
+      - name: Ejecutar Script de Scraping Real
+        env:
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
         run: python etl_job.py
